Update CSS styles and fix overflow issues

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply overflow-hidden text-primary font-secondary bg-white;
+    @apply overflow-visible text-primary font-secondary bg-white;
   }
   .h1 {
     @apply text-[54px] lg:text-[108px] font-primary font-bold capitalize leading-[120%] tracking-[-0.05em] mb-2;
